# class-big-data

./: README.md  pyproject.toml
database/: init_data.py  tables.sql
docker/: .env  compose-spark.yml  spark-defaults.conf
envs/: localhost.env
examples_spark/: analisis_likes.py  count_map_reduce.py  count_numbers.py  create_dataframe.py  read_postgres.py  ventas_dataframe.py  ventas_map_reduce.py  viral_posts.py
